[gd_scene load_steps=5 format=2]

[ext_resource path="res://sprites/CrackLeft.png" type="Texture" id=1]
[ext_resource path="res://sprites/CrackMiddle.png" type="Texture" id=2]
[ext_resource path="res://sprites/CrackRight.png" type="Texture" id=3]
[ext_resource path="res://objects/TransitionIn.gd" type="Script" id=4]

[node name="TransitionIn" type="Node2D"]
script = ExtResource( 4 )

[node name="Left" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="Right" type="Sprite" parent="."]
position = Vector2( 253, 0 )
texture = ExtResource( 3 )
centered = false

[node name="MiddleLight" type="Sprite" parent="."]
position = Vector2( 308, 180 )
texture = ExtResource( 2 )

[node name="MiddleDark" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
position = Vector2( 304, 180 )
texture = ExtResource( 2 )

[node name="MiddleDark2" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
position = Vector2( 313, 180 )
texture = ExtResource( 2 )

[node name="MiddleDark3" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
position = Vector2( 308, 180 )
texture = ExtResource( 2 )

[node name="Tween" type="Tween" parent="."]
